multicolumn layout preperation

--- a/app/views/quran/view.html.erb
+++ b/app/views/quran/view.html.erb
@@ -1,3 +1,4 @@
+i<% content_for :quran_text do %>
 <div class="container" id="container" style="margin-left: 376px;">
 <div id="body-content" class="ui-helper-clearfix">
     <div id="main-content" class="floatEnd">
@@ -38,4 +39,5 @@
     </div>
 </div>
 </div>
+<% end %>
 
