--- a/app/views/layouts/quran.html.erb
+++ b/app/views/layouts/quran.html.erb
@@ -8,7 +8,7 @@
     </head>
     <body style="background-position: 400px 0px;">
 
-        <%= yield %>
+        <%= yield :quran_text %>
 
     </body>
 </html>
