--- a/app/views/layouts/quran.html.erb
+++ b/app/views/layouts/quran.html.erb
@@ -3,12 +3,45 @@
     <head>
         <title>Atks</title>
         <%= stylesheet_link_tag    'tanzil', media: 'all', 'data-turbolinks-track' => true %>
+        <%= stylesheet_link_tag    'quran', media: 'all', 'data-turbolinks-track' => true %>
         <%= javascript_include_tag 'tanzil', 'data-turbolinks-track' => true %>
         <%= csrf_meta_tags %>
     </head>
     <body style="background-position: 400px 0px;">
 
-        <%= yield :quran_text %>
+        <div class="container" id="container" style="margin-left: 376px;">
+            <div id="body-content" class="ui-helper-clearfix">
+                <div id="main-content" class="floatEnd">
+                    <div id="quran-tab" class="main-tab quran" style="font-size: 19px; display: block; margin:auto 0;">
+                        <div class="quranPageHeader ui-helper-clearfix">
+                            <div style="float: left; width: 180px; text-align: left;"><span id="suraName">سورة مريم</span></div>
+                            <div style="float: left; width: 130px;">
+                                <a class="arrow-link arrow-left" href="javascript:changePage('left')" original-title="">◄</a>
+                                &nbsp;<span class="pageNumber">٣٠٥</span>&nbsp;
+                                <a class="arrow-link arrow-right" href="javascript:changePage('right')" original-title="">►</a>
+                            </div>
+                            <div style="float: right"><span id="juzName">الجزء السادس عشر</span> </div>
+                        </div>
+                        <div class="qFrameTop">
+                        </div>
+                        <div class="qFrameMiddle" id="middleFrame">
+                            <div class="quranText" id="quranText" style="text-align: justify; font-family: 'KFGQPC Uthman Taha Naskh', KFGQPC_Naskh; font-size: 1.15em; font-weight: normal; display: block;"><div class="suraHeaderFrame"><div class="suraHeaderText">سورة مريم</div></div><div class="ayaText besm">بِسْمِ اللَّـهِ الرَّحْمَـٰنِ الرَّحِيمِ </div>
+                                <%= yield :quran_text %>
+                            </div>
+                        </div>
+                        <div class="qFrameBottom">
+                        </div>
+                        <div class="quranPageFooter">
+                            <a class="arrow-link arrow-left" href="javascript:changePage('left')" original-title="">◄</a>
+                            &nbsp;<span class="pageNumber">٣٠٥</span>&nbsp;
+                            <a class="arrow-link arrow-right" href="javascript:changePage('right')" original-title="">►</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="column-right"><%= yield :atks_sarf %></div>
+            <div class="column-left"></div>
+        </div>
 
     </body>
 </html>
