--- a/app/assets/stylesheets/quran.scss
+++ b/app/assets/stylesheets/quran.scss
@@ -1,6 +1,4 @@
 // Place all the styles related to the quran controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.column-left{ float: left; width: 33%; }
-.column-right{ float: right; width: 10%; }
-.column-center{ display: inline-block; width: 33%; }
+#side-content{ float: right; }
