--- a/app/views/quran/view.html.erb
+++ b/app/views/quran/view.html.erb
@@ -2,7 +2,12 @@
     <% @ayat.each do |aya| %>
         <span id="19-2" class="aya">
             <span class="aya-wrapper" style="background-color: transparent;">
-                <span class="ayaText"><%= aya.text %></span> 
+                <span class="ayaText">
+                  <!--<%= aya.text %>-->
+                  <% aya.text.split(/\s+/).each do |word| %>
+                    <span class="ayaWord"><%= word.to_s %></span>
+                  <% end %>
+                </span>
                 <span class="ayaNumber" style="font-size: 0.92em;">﴿<a href="http://tanzil.net/#19:2">٢</a>﴾</span>
             </span>
         </span>
