extracting related page of given sura:aya pair

--- a/app/views/quran/view.html.erb
+++ b/app/views/quran/view.html.erb
@@ -15,5 +15,9 @@
 <% end %>
 
 <% content_for :atks_sarf do %>
-    <h1>Salam man inja hastam</h1>
+    <h2>Page: <%= @page %></h2>
+    <br/>
+    <h2>nextPageSura: <%= @nextPageSura %></h2>
+    <br/>
+    <h2>nextPageAya: <%= @nextPageAya %></h2>
 <% end %>
