--- a/app/views/layouts/quran.html.erb
+++ b/app/views/layouts/quran.html.erb
@@ -3,8 +3,11 @@
     <head>
         <title>Atks</title>
         <%= stylesheet_link_tag    'tanzil', media: 'all', 'data-turbolinks-track' => true %>
-        <%= stylesheet_link_tag    'quran', media: 'all', 'data-turbolinks-track' => true %>
         <%= javascript_include_tag 'tanzil', 'data-turbolinks-track' => true %>
+        <%= stylesheet_link_tag    'quran', media: 'all', 'data-turbolinks-track' => true %>
+        <%= javascript_include_tag  'quran', 'data-turbolinks-track' => true %>
+
+
         <%= csrf_meta_tags %>
     </head>
     <body style="background-position: 400px 0px;">
