--- a/app/views/quran/view.html.erb
+++ b/app/views/quran/view.html.erb
@@ -1,14 +1,14 @@
 <% content_for :quran_text do %>
     <% @ayat.each do |aya| %>
-        <span id="19-2" class="aya">
+        <span id="<%= @sura.to_s + '-' + aya['index'] %> class="aya">
             <span class="aya-wrapper" style="background-color: transparent;">
                 <span class="ayaText">
-                  <!--<%= aya.text %>-->
-                  <% aya.text.split(/\s+/).each do |word| %>
+                  <!--<%= aya['text'] %>-->
+                  <% aya['text'].split(/\s+/).each do |word| %>
                     <span class="ayaWord"><%= word.to_s %></span>
                   <% end %>
                 </span>
-                <span class="ayaNumber" style="font-size: 0.92em;">﴿<a href="http://tanzil.net/#19:2">٢</a>﴾</span>
+                <span class="ayaNumber" style="font-size: 0.92em;">﴿<a href="http://tanzil.net/#19:2"><%= aya['index'] %></a>﴾</span>
             </span>
         </span>
     <% end %>
