--- a/app/views/layouts/quran.html.erb
+++ b/app/views/layouts/quran.html.erb
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Atks</title>
+        <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
         <%= stylesheet_link_tag    'tanzil', media: 'all', 'data-turbolinks-track' => true %>
         <%= javascript_include_tag 'tanzil', 'data-turbolinks-track' => true %>
         <%= stylesheet_link_tag    'quran', media: 'all', 'data-turbolinks-track' => true %>
