--- a/app/views/quran/view.html.erb
+++ b/app/views/quran/view.html.erb
@@ -4,8 +4,8 @@
             <span class="aya-wrapper" style="background-color: transparent;">
                 <span class="ayaText">
                   <!--<%= aya['text'] %>-->
-                  <% aya['text'].split(/\s+/).each do |word| %>
-                    <span class="ayaWord"><%= word.to_s %></span>
+                  <% aya['text'].split(/\s+/).each_with_index do |word, windex| %>
+                    <span id="<%= @sura.to_s + '-' + aya['index'] + '-' + windex.to_s %>" class="ayaWord" data-background-color="#990000"><%= word.to_s %></span>
                   <% end %>
                 </span>
                 <span class="ayaNumber" style="font-size: 0.92em;">﴿<a href="http://tanzil.net/#19:2"><%= aya['index'] %></a>﴾</span>
