--- a/app/views/quran/view.html.erb
+++ b/app/views/quran/view.html.erb
@@ -1,18 +1,7 @@
 <% content_for :quran_text do %>
     <% @ayat.each do |aya| %>
         <% aya_id = @sura.to_s + '-' + aya['index'] %>
-        <span id="<%= aya_id %>" class="aya">
-            <span class="aya-wrapper" style="background-color: transparent;">
-                <span class="ayaText">
-                  <!--<%= aya['text'] %>-->
-                  <% aya['text'].split(/\s+/).each_with_index do |word, windex| %>
-                      <% wordId = @sura.to_s + '-' + aya['index'] + '-' + windex.to_s %>
-                    <span id="<%= wordId %>" class="ayaWord" data-background-color="#559944"><%= word.to_s %></span>
-                  <% end %>
-                </span>
-                <span class="ayaNumber" style="font-size: 0.92em;">﴿<a href="http://tanzil.net/#19:2"><%= aya['index'] %></a>﴾</span>
-            </span>
-        </span>
+            <%= render partial: "aya", locals: {aya: aya, aya_id: aya_id} %>
     <% end %>
 <% end %>
 
