--- a/app/views/layouts/quran.html.erb
+++ b/app/views/layouts/quran.html.erb
@@ -14,7 +14,14 @@
     </head>
     <body style="background-position: 400px 0px;">
 
-        <div id="side-content" class="floatEnd"><%= yield :atks_sarf %></div>
+        <div id="side-content" class="floatEnd">
+          <%= yield :page_meta %>
+        </div>
+
+        <div id="sarf-content" class="floatEnd">
+          <%= yield :atks_sarf %>
+        </div>
+
         <div class="container" id="container" style="margin-left: 376px; overflow: hidden;">
             <div id="main-content" class="floatEnd">
                 <div id="quran-tab" class="main-tab quran" style="font-size: 19px; display: block; margin:auto 0;">
@@ -44,6 +51,5 @@
                 </div>
             </div>
         </div>
-
     </body>
 </html>
