--- a/app/views/quran/view.html.erb
+++ b/app/views/quran/view.html.erb
@@ -5,7 +5,7 @@
     <% end %>
 <% end %>
 
-<% content_for :atks_sarf do %>
+<% content_for :page_meta do %>
     <h2>Page: <%= @page %></h2>
     <br/>
     <h2>nextPageSura: <%= @nextPageSura %></h2>
