tanzil colorset and deselect other onclick

--- a/app/views/quran/_word.html.erb
+++ b/app/views/quran/_word.html.erb
@@ -1,4 +1,5 @@
-<span id="<%= id %>" class="ayaWord" data-background-color="#559944">
+<span id="<%= id %>" class="ayaWord" data-selected-background-color="#c4ecbd" data-original-background-color="#f7fce3">
   <%= link_to word.to_s, fetch_info_path(:word => word), :remote => true %>
   <!--<%= word.to_s %>-->
 </span>
+<!--<span id="space-<%= id %>"> </span>-->
