--- a/app/views/quran/_word.html.erb
+++ b/app/views/quran/_word.html.erb
@@ -1,5 +1,6 @@
-<span id="<%= id %>" class="ayaWord" data-selected-background-color="#c4ecbd" data-original-background-color="#f7fce3">
-  <%= link_to word.to_s, fetch_info_path(:word => word), :remote => true %>
+<span id="<%= id %>" class="span-ayaWord" data-selected-background-color="#c4ecbd" data-original-background-color="#f7fce3">
+  <%= link_to word.to_s, fetch_info_path(:word => word), :class => "ayaWord",
+              :data => {:selected_bg_color => "#c4ecbd", :original_bg_color => "#f7fce3"},  :remote => true %>
   <!--<%= word.to_s %>-->
 </span>
 <!--<span id="space-<%= id %>"> </span>-->
