simple API call works fine, fixes issue #7

--- a/app/views/layouts/quran.html.erb
+++ b/app/views/layouts/quran.html.erb
@@ -18,8 +18,9 @@
           <%= yield :page_meta %>
         </div>
 
+        <!--AJAX + Partial-->
         <div id="sarf-content" class="floatEnd">
-          <%= yield :atks_sarf %>
+          <!--<%= yield :atks_sarf %>-->
         </div>
 
         <div class="container" id="container" style="margin-left: 376px; overflow: hidden;">
