--- a/app/views/layouts/quran.html.erb
+++ b/app/views/layouts/quran.html.erb
@@ -4,8 +4,8 @@
         <title>Atks</title>
         <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 
-        <%= stylesheet_link_tag    'tanzil', media: 'all', 'data-turbolinks-track' => true %>
-        <%= javascript_include_tag 'tanzil', 'data-turbolinks-track' => true %>
+        <%= stylesheet_link_tag    'components/tanzil', media: 'all', 'data-turbolinks-track' => true %>
+        <%= javascript_include_tag 'components/tanzil', 'data-turbolinks-track' => true %>
         <%= stylesheet_link_tag    'quran', media: 'all', 'data-turbolinks-track' => true %>
         <%= javascript_include_tag  'quran', 'data-turbolinks-track' => true %>
 
@@ -28,7 +28,6 @@
         <div id="quran-content" class="floatEnd">
           <%= yield :quran_text %>
         </div>
-
 
     </body>
 </html>
