--- a/app/views/sarf_analysis/analyze_token.js.erb
+++ b/app/views/sarf_analysis/analyze_token.js.erb
@@ -1,1 +1,3 @@
-$("#sarf-content").html("<%= escape_javascript(render partial: 'sarf', locals: { info: @result } ) %>");
+$("#sarf-content").html(" \
+<%= escape_javascript(render partial: 'sarf', locals: { info: @result } ) %> \
+");
