quran view single page is ok

--- a/app/assets/stylesheets/components/quran.scss
+++ b/app/assets/stylesheets/components/quran.scss
@@ -8,3 +8,14 @@
   width: 200px;
   top: 40px;
 }
+
+.quranText {
+  direction: rtl;
+  text-align: justify;
+  font-family: 'KFGQPC Uthman Taha Naskh', KFGQPC_Naskh;
+  font-size: 1.15em;
+  font-weight: normal;
+  margin: 0px 30px;
+  padding: 16px 14px;
+  display: block;
+}
