--- a/app/views/layouts/quran.html.erb
+++ b/app/views/layouts/quran.html.erb
@@ -17,20 +17,13 @@
 <body>
 <div id="main-container" class="container">
   <div class="row">
-    <!--AJAX + Partial-->
-    <div id="sarf-content" class="col-md-4">
-      <!--<%= yield :atks_sarf %>-->
-    </div>
-
-    <div id="quran-content" class="col-md-6">
+    <div id="quran-content" class="col-xs-9">
       <%= yield :quran_text %>
     </div>
-
-    <div id="test-content" class="col-md-4">
-
+    <!--AJAX + Partial-->
+    <div id="sarf-content" class="col-xs-3">
+      <!--<%= yield :atks_sarf %>-->
     </div>
-
-
   </div>
 </div>
 </body>
