--- a/app/views/quran/_quran_footer.html.erb
+++ b/app/views/quran/_quran_footer.html.erb
@@ -1,6 +1,8 @@
 <div class="qFrameBottom"></div>
 <div class="quranPageFooter">
-  <a class="arrow-link arrow-left" href="javascript:changePage('left')" original-title="">◄</a>
+  <%= link_to '◄', view_page_path(:page => @page.to_i + 1),
+              :class => "arrow-link arrow-left", :remote => true %>
   &nbsp;<span class="pageNumber"><%= @page %></span>&nbsp;
-  <a class="arrow-link arrow-right" href="javascript:changePage('right')" original-title="">►</a>
+  <%= link_to '►', view_page_path(:page => @page.to_i - 1),
+              :class => "arrow-link arrow-left", :remote => true %>
 </div>
